# farness_dicp

./: .gitignore  README.md  package.xml  setup.cfg  setup.cfg.save  setup.py
config/: dicp_params.yaml
farness_dicp/: main.py
foxglov/: voyant lidar.json
launch/: dicp_stitcher.launch.py
test/: test_dicp_launch.py
